fixed margin issue on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,7 @@ footer{
 
     .aboutText{
         width: 100%;
+        padding-left:0px;
     }
 
     .skills{
